Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.4
-
Unexpected results
-
Q1/2026 Server Maintenance
Description
DROP table if EXISTS t1; |
DROP table if EXISTS t2; |
CREATE TABLE t1(geom geometry NOT NULL); |
CREATE TABLE t2(geom geometry NOT NULL); |
INSERT INTO t1 (geom) VALUES(ST_GeomFromText('POLYGON ((0 0, 0 1, 1 1, 1 0, 0 0))')); |
INSERT INTO t2 (geom) VALUES(ST_GeomFromText('LINESTRING (1 1, 1 2, 2 2, 2 1, 1 1)')); |
|
|
SELECT ST_OVERLAPS(t1.geom, t2.geom) FROM t1, t2; |
-- expected: {f}
|
-- actual : {t} |
The original input consists of a Polygon and a Linestring, with dimensions of 2 and 1, respectively.
Attachments
Issue Links
- relates to
-
MDEV-36058 ST_CROSSES returns 0 instead of NULL
-
- Closed
-