MDEV-35765 ST_OVERLAPS wrong result when dim(geom1) <> dim(geom2)

Validates that the two geometries passed to ST_OVERLAPS have the
same number of dimensions.